force-app/main/default/objects/Hostel_Application__c/Hostel_Application__c.object-meta.xml
<CustomObject>
    <label>Hostel Application</label>
    <nameField>
        <label>Hostel Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hostel Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>