force-app/main/default/objects/Hostel_Application__c/fields/Preferred_Hostel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Hostel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Hostel</label>
    <referenceTo>Hostel__c</referenceTo>
    <relationshipLabel>Hostel Applications</relationshipLabel>
    <relationshipName>Hostel_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>