force-app/main/default/objects/Hostel_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Checked In</fullName>
            </value>
            <value>
                <fullName>Checked Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>