force-app/main/default/objects/Hostel_Application__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Hostel Applications</relationshipLabel>
    <relationshipName>Hostel_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>